add the image link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="container">
       <div class="ProfileImg">
-        <!-- <img src="/img/Magbool02.jpg" width="250" height="250" /> -->
+        <img src="/img/Magbool02.jpg" width="250" height="250" />
       </div>
       <div class="Intro">
         <h1>AHMAD ALI MAGBOOL</h1>
