edit the Button text name

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           inspire positive change and help build bridges between people
         </p>
         <a class="CTA" href="https://linktr.ee/magbool" target="_blank"
-          >Branch</a
+          >magbool new pull</a
         >
       </div>
       <div class="leftBar">
