--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           inspire positive change and help build bridges between people
         </p>
         <a class="CTA" href="https://linktr.ee/magbool" target="_blank"
-          >magbool new pull</a
+          >sample word</a
         >
       </div>
       <div class="leftBar">
@@ -77,7 +77,7 @@
           <div class="jobInfo">
             <h3>Sr. Video- lead | <span>Al Ain News</span></h3>
             <div class="duration">
-              <span>2022-Present </span>
+              <span>04/2022-Present </span>
             </div>
           </div>
           <div class="jobList">
@@ -128,7 +128,7 @@
           <div class="jobInfo">
             <h3>Motion & Video Editor | <span>Al Ain News</span></h3>
             <div class="duration">
-              <span>08/2017 - 04/2022</span>
+              <span>08/2017 - 03/2022</span>
             </div>
           </div>
           <div class="jobList">
@@ -152,14 +152,14 @@
           <div class="jobInfo">
             <h3>Motion Designer | <span>S24 TV channel</span></h3>
             <div class="duration">
-              <span>09/2016 - 12/2017</span>
+              <span>09/2016 - 07/2017</span>
             </div>
           </div>
           <div class="jobList">
             <ul>
               <li>
                 Working with our Art Director and Producers to come up with
-                visual ideasز
+                visual ideas.
               </li>
               <li>Design and animate scenes for TV shows.</li>
               <li>Creating Intros, outros, and show IDs.</li>
@@ -169,7 +169,7 @@
           <div class="jobInfo">
             <h3>Freelancer Artist | <span>Sudan</span></h3>
             <div class="duration">
-              <span>09/2012 - 12/2016</span>
+              <span>09/2012 - 08/2016</span>
             </div>
           </div>
           <div class="jobList">
@@ -185,14 +185,6 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="conC01">
-        <h3>website</h3>
-        <p>linktr.ee/Magbool</p>
-      </div>
-      <div class="conC02">
-        <h3>phone</h3>
-        <p>++971 --- ---</p>
-      </div>
       <div class="conC03">
         <h3>email</h3>
         <p>contact@magbool.me</p>
